--- a/index.html
+++ b/index.html
@@ -3,280 +3,255 @@
 
 <head>
     <style>
-        #embeddedDocument {
-            /* flex: 1; */
-            width: 120%;
-            /* padding: 0.5em; */
-            height: 100vh;
-            border: none;
-            /* display: none; */
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 0 20px;
         }
 
-        #artContainerWithNotes,
-        #artContainerWithoutNotes {
-            flex: 1;
-            /* max-width:fit-contemnt; */
-            /* width: 20em; */
-            padding: 1em;
-            background: white;
-            border: 1px solid #ccc;
-        }
-
-        #artWrapper {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-evenly;
-            align-items: center;
-            gap: 2em;
+        textarea {
             width: 100%;
+            height: 200px;
+            padding: 10px;
+            margin-bottom: 10px;
+            font-family: monospace;
         }
 
-        .controls {
-            margin: 20px;
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-right: 10px;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        pre {
+            background-color: #f5f5f5;
+            padding: 15px;
+            border-radius: 4px;
+            overflow-x: auto;
+            white-space: pre-wrap;
+        }
+
+        .line-container {
             display: flex;
-            gap: 10px;
+            margin-bottom: 12px;
+        }
+
+        .note {
+            height: 48px;
+            border: 0.75pt solid #353638;
+            display: flex;
             align-items: center;
+            justify-content: center;
+            font-size: 12px;
         }
 
-        #defaultCode {
-            display: none;
+        #visualResult,
+        #visualResultNoNotes {
+            margin-top: 20px;
         }
 
-        canvas {
-            width: 20em;
-            /* max-width: fit-content; */
-            height: auto;
+        #unmappedNotes {
+            margin-top: 20px;
+            color: red;
+        }
+
+        #unmappedNotes ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        #unmappedNotes li {
+            margin: 5px 0;
+            padding: 5px;
+            background-color: #fff0f0;
+            border-radius: 4px;
+            display: inline-block;
+            margin-right: 10px;
         }
     </style>
     <script>
-        function displayDocument(event) {
-            const file = event.target.files[0];
-            const fileName = file.name;
-            console.log(file.name)
-            if (file) {
-                const url = URL.createObjectURL(file);
-                document.getElementById('embeddedDocument').src = url;
-            }
-        }
-
         const colorMap = {
-            'R': 'f2f2f2', 'C': 'ee3c5c', 'D': 'fbc900', 'Eb': 'e0d92c', 'E': 'cee637',
-            'F': '86cc51', 'G': '2da8e6', 'A': 'b347f5', 'Bb': 'f030f0', 'B': 'f078b0'
+            'R': '#f2f2f2',
+            'Cmm': '#991732',
+            'Dbmm': '#bf4426',
+            'Dmm': '#bf8f28',
+            'Ebmm': '#a6a022',
+            'Emm': '#9aad29',
+            'Fmm': '#5f9933',
+            'Fsmm': '#4c997f',
+            'Gmm': '#207099',
+            'Abmm': '#3023a3',
+            'Amm': '#6b1da3',
+            'Bbmm': '#a31da3',
+            'Bmm': '#bf2e72',
+            'Cm': '#c41e40',
+            'Dbm': '#e6512f',
+            'Dm': '#e6ad31',
+            'Ebm': '#d0ca2b',
+            'Em': '#b6cc31',
+            'Fm': '#6fb33c',
+            'Fsm': '#59b394',
+            'Gm': '#2683b3',
+            'Abm': '#3c2bcc',
+            'Am': '#8821cc',
+            'Bbm': '#cc21cc',
+            'Bm': '#e63a8a',
+            'C': '#ee3c5c',
+            'Db': '#ff6e4d',
+            'D': '#fbc900',
+            'Eb': '#e0d92c',
+            'E': '#cee637',
+            'F': '#86cc51',
+            'Fs': '#6ddeb8',
+            'G': '#2da8e6',
+            'Ab': '#7c6ef5',
+            'A': '#b347f5',
+            'Bb': '#f030f0',
+            'B': '#f078b0',
+            'Cp': '#ff7070',
+            'Dbp': '#ff9780',
+            'Dp': '#ffe16b',
+            'Ebp': '#f5ed30',
+            'Ep': '#e3f562',
+            'Fp': '#aee388',
+            'Fsp': '#90f0cf',
+            'Gp': '#79c9f2',
+            'Abp': '#988cff',
+            'Ap': '#d699ff',
+            'Bbp': '#ff80ff',
+            'Bp': '#ff99c9'
         };
 
-        function parseCode(code) {
-            return code.trim().split('\n').map(line => {
-                return line.trim().split(' ').map(w => {
-                    const match = w.match(/([A-Za-z#b]+)\(([0-9.]+)\)/);
-                    return match ? {
-                        note: match[1],
-                        value: match[2],
-                        color: colorMap[match[1]] || '000000',
-                        width: parseFloat(match[2]) * 48
-                    } : null;
-                }).filter(Boolean);
-            });
+        // Create case-insensitive color map
+        const caseInsensitiveColorMap = Object.fromEntries(
+            Object.entries(colorMap).map(([key, value]) => [key.toLowerCase(), value])
+        );
+
+        function getColor(note) {
+            return caseInsensitiveColorMap[note.toLowerCase()];
         }
 
-        function generateArt() {
-            const code = document.getElementById('defaultCode').innerText;
-            const parsedCode = parseCode(code);
+        function parseNotes() {
+            const input = document.getElementById('inputText').value;
+            const resultDiv = document.getElementById('result');
+            const visualResult = document.getElementById('visualResult');
+            const visualResultNoNotes = document.getElementById('visualResultNoNotes');
+            const unmappedNotesDiv = document.getElementById('unmappedNotes');
 
-            const canvas = document.getElementById('artContainerWithNotes');
-            const ctx = canvas.getContext('2d');
+            // Clear previous results
+            visualResult.innerHTML = '';
+            visualResultNoNotes.innerHTML = '';
+            unmappedNotesDiv.innerHTML = '';
 
-            let maxWidth = 0;
-            parsedCode.forEach(line => {
-                const lineWidth = line.reduce((sum, w) => sum + w.width, 0);
-                maxWidth = Math.max(maxWidth, lineWidth);
-            });
+            // Set to store unique unmapped notes
+            const unmappedNotes = new Set();
 
-            const scale = window.devicePixelRatio || 1;
-            canvas.width = maxWidth * scale;
-            canvas.height = parsedCode.length * (48 + 24) * scale;
-            ctx.scale(scale, scale);
+            // Remove starting and ending curly braces and split by newlines
+            const cleanText = input.trim().replace(/^\{|\}$/g, '');
+            const lines = cleanText.split('\n');
 
-            ctx.fillStyle = 'white';
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
+            // Parse each line and collect unmapped notes
+            let result = lines.map(line => {
+                const notePattern = /([A-Za-z]+(?:b|p)?)(?:\((\d*\.?\d+)\))/g;
+                const matches = [];
+                let match;
 
-            parsedCode.forEach((line, lineIndex) => {
-                let xOffset = 0;
-                const yOffset = lineIndex * (48 + 24);
-
-                line.forEach(w => {
-                    // Draw note on top
-                    ctx.fillStyle = '#000000';
-                    ctx.font = '6px Garamond';
-                    ctx.textAlign = 'center';
-                    ctx.textBaseline = 'middle';
-                    ctx.fillText(w.note, xOffset + w.width / 2, yOffset + 12);
-
-                    // Draw number below the note
-                    ctx.fillText(w.value, xOffset + w.width / 2, yOffset + 22);
-
-                    // Draw rectangle
-                    ctx.fillStyle = '#' + w.color;
-                    ctx.fillRect(xOffset, yOffset + 24, w.width, 48);
-
-                    // Draw stroke
-                    ctx.strokeStyle = '#353638';
-                    ctx.lineWidth = 0.75;
-                    ctx.strokeRect(xOffset, yOffset + 24, w.width, 48);
-
-                    xOffset += w.width;
-                });
-            });
-        }
-
-        function generateArtWithoutNotes() {
-            const code = document.getElementById('defaultCode').innerText;
-            const parsedCode = parseCode(code);
-
-            const canvas = document.getElementById('artContainerWithoutNotes');
-            const ctx = canvas.getContext('2d');
-
-            let maxWidth = 0;
-            parsedCode.forEach(line => {
-                const lineWidth = line.reduce((sum, w) => sum + w.width, 0);
-                maxWidth = Math.max(maxWidth, lineWidth);
-            });
-
-            const scale = window.devicePixelRatio || 1;
-            canvas.width = maxWidth * scale;
-            canvas.height = parsedCode.length * (48 + 12) * scale;
-            ctx.scale(scale, scale);
-
-            ctx.fillStyle = 'white';
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-            parsedCode.forEach((line, lineIndex) => {
-                let xOffset = 0;
-                const yOffset = lineIndex * (48 + 12);
-
-                line.forEach(w => {
-                    ctx.fillStyle = '#' + w.color;
-                    ctx.fillRect(xOffset, yOffset, w.width, 48);
-
-                    ctx.strokeStyle = '#353638';
-                    ctx.lineWidth = 0.75;
-                    ctx.strokeRect(xOffset, yOffset, w.width, 48);
-
-                    xOffset += w.width;
-                });
-            });
-        }
-
-        function downloadSVG(withNotes) {
-        const code = document.getElementById('defaultCode').innerText;
-        const parsedCode = parseCode(code);
-
-        let svg = `<svg xmlns="http://www.w3.org/2000/svg" width="800" height="${parsedCode.length * 72}">`;
-        svg += `<rect width="100%" height="100%" fill="white"/>`;
-
-        parsedCode.forEach((line, lineIndex) => {
-            let xOffset = 0;
-            const yOffset = lineIndex * (48 + 24);
-
-            line.forEach(w => {
-                if (withNotes) {
-                    // Draw text in SVG
-                    svg += `<text x="${xOffset + w.width / 2}" y="${yOffset + 12}" font-family="Garamond" font-size="6" fill="black" text-anchor="middle">${w.note}</text>`;
-                    svg += `<text x="${xOffset + w.width / 2}" y="${yOffset + 22}" font-family="Garamond" font-size="6" fill="black" text-anchor="middle">${w.value}</text>`;
+                while ((match = notePattern.exec(line)) !== null) {
+                    const [fullMatch, note] = match;
+                    if (!getColor(note)) {
+                        unmappedNotes.add(note);
+                    }
+                    matches.push(fullMatch);
                 }
-                
-                // Draw rectangle
-                svg += `<rect x="${xOffset}" y="${yOffset + (withNotes ? 24 : 0)}" width="${w.width}" height="48" fill="#${w.color}" stroke="#353638" stroke-width="0.75"/>`;
-                xOffset += w.width;
+
+                return matches;
             });
-        });
 
-        svg += '</svg>';
+            // Remove empty arrays
+            result = result.filter(line => line.length > 0);
 
-        const blob = new Blob([svg], { type: 'image/svg+xml' });
-        const url = URL.createObjectURL(blob);
-        const a = document.createElement('a');
-        a.href = url;
-        a.download = withNotes ? 'art_with_notes.svg' : 'art_without_notes.svg';
-        document.body.appendChild(a);
-        a.click();
-        document.body.removeChild(a);
-        URL.revokeObjectURL(url);
-    }
+            // Display the parsed result
+            resultDiv.textContent = JSON.stringify(result, null, 2);
 
-        // function downloadSVG() {
-    
-        //     const code = document.getElementById('defaultCode').innerText;
-        //     const parsedCode = parseCode(code);
+            // Display unmapped notes if any
+            if (unmappedNotes.size > 0) {
+                unmappedNotesDiv.innerHTML = `
+                    <h3>Notes without color mappings:</h3>
+                    <ul>
+                        ${Array.from(unmappedNotes).map(note => `<li>${note}</li>`).join('')}
+                    </ul>
+                `;
+            }
 
-        //     let svg = `<svg xmlns="http://www.w3.org/2000/svg" width="800" height="${parsedCode.length * 72}">`;
-        //     svg += `<rect width="100%" height="100%" style="padding: 1em;" fill="white"/>`;
+            // Create visual representations
+            result.forEach(line => {
+                // With notes
+                const lineContainer = document.createElement('div');
+                lineContainer.className = 'line-container';
 
-        //     parsedCode.forEach((line, lineIndex) => {
-        //         let xOffset = 0;
-        //         const yOffset = lineIndex * (48 + 24);
+                // Without notes
+                const lineContainerNoNotes = document.createElement('div');
+                lineContainerNoNotes.className = 'line-container';
 
-        //         line.forEach(w => {
-        //             // Draw text in SVG
-        //             svg += `<text x="${xOffset + w.width / 2}" y="${yOffset + 12}" font-family="Garamond" font-size="6" fill="black" text-anchor="middle">${w.note}</text>`;
-        //             svg += `<text x="${xOffset + w.width / 2}" y="${yOffset + 22}" font-family="Garamond" font-size="6" fill="black" text-anchor="middle">${w.value}</text>`;
+                line.forEach(noteStr => {
+                    const [_, note, duration] = noteStr.match(/([A-Za-z]+(?:b|p)?)(?:\((\d*\.?\d+)\))/);
 
-        //             // Draw rectangle
-        //             svg += `<rect x="${xOffset}" y="${yOffset + 24}" width="${w.width}" height="48" fill="#${w.color}" stroke="#353638" stroke-width="0.75"/>`;
+                    // Create div with notes
+                    const noteDiv = document.createElement('div');
+                    noteDiv.className = 'note';
+                    const width = parseFloat(duration) * 48;
+                    noteDiv.style.width = `${width}px`;
+                    noteDiv.style.backgroundColor = getColor(note) || '#ffffff';
+                    noteDiv.textContent = `${note}(${duration})`;
+                    lineContainer.appendChild(noteDiv);
 
-        //             xOffset += w.width;
-        //         });
-        //     });
+                    // Create div without notes
+                    const noteDivNoNotes = document.createElement('div');
+                    noteDivNoNotes.className = 'note';
+                    noteDivNoNotes.style.width = `${width}px`;
+                    noteDivNoNotes.style.backgroundColor = getColor(note) || '#ffffff';
+                    lineContainerNoNotes.appendChild(noteDivNoNotes);
+                });
 
-        //     svg += '</svg>';
-
-        //     const blob = new Blob([svg], { type: 'image/svg+xml' });
-        //     const url = URL.createObjectURL(blob);
-        //     const a = document.createElement('a');
-        //     a.href = url;
-        //     a.download = 'art.svg';
-        //     document.body.appendChild(a);
-        //     a.click();
-        //     document.body.removeChild(a);
-        //     URL.revokeObjectURL(url);
-        // }
+                visualResult.appendChild(lineContainer);
+                visualResultNoNotes.appendChild(lineContainerNoNotes);
+            });
+        }
     </script>
 </head>
 
 <body>
-    <div id="artWrapper">
-        <div>
-            <label for="uploadDocument">Upload Document</label>
-            <iframe id="embeddedDocument" style="display: flex; border: 1px solid black;"></iframe>
+    <h2>Music Notation Parser</h2>
+    <div style="display: flex; justify-content: space-between; width: 100%; gap: 2em;">
+        <div style="width: 100%;">
+            <h2>Music Notation</h2>
+            <textarea id="inputText" placeholder="Enter your musical notation here..."></textarea>
+        </div>
+        <div style="width: 50%;">
+            <h3>Parsed Result:</h3>
+            <pre id="result" style="height: 20em; overflow: scroll;"></pre>
         </div>
         <div>
-            <label for="artContainerWithNotes">With Notes</label>
-            <canvas id="artContainerWithNotes" style="display: flex; border: 1px solid black;"></canvas>
+            <h3>Visual Representation (with notes):</h3>
+            <div id="visualResult" style="height: 20em; overflow: scroll; width: 100%;"></div>
         </div>
         <div>
-            <label for="artContainerWithoutNotes">Without Notes</label>
-            <canvas id="artContainerWithoutNotes" style="display: flex; border: 1px solid black;"></canvas>
+            <h3>Visual Representation (without notes):</h3>
+            <div id="visualResultNoNotes" style="height: 20em; overflow: scroll; width: 100%;"></div>
         </div>
+    </div>
 
-        <div class="controls">
-            <input type="file" accept=".pdf,.doc,.docx" onchange="displayDocument(event)">
-            <button onclick="generateArt();generateArtWithoutNotes()">Generate Art</button>
-            <button onclick="downloadSVG(true)">Download SVG with Notes</button>
-<button onclick="downloadSVG(false)">Download SVG without Notes</button>
-        </div>
-
-        <div id="defaultCode">
-            R(2) R(.25) Bb(.25) Bb(.25) Bb(.25) D(.5) D(.25)
-            D(2) R(1) D(.5) F(.5)
-            G(.75) G(.25) G(.25) F(.25) F(.5)
-            F(.25) D(.75) D(1) R(1) D(.5) C(.25) Bb(.25)
-            Bb(1) R(.5) C(.25) D(.25) Eb(.75) D(.25) D(.5) C(.25)
-            C(.5) C(.5) C(1) R(.5) Bb(.25) Bb(.25) D(.25) F(.25) F(.25) D(.25)
-            F(.75) D(.25) D(1) R(.75) Bb(.25) Eb(.25) Eb(.25) Eb(.25) D(.25)
-            D(.5) D(.5) D(1) R(.5) Bb(.25) D(.25) D(.25) C(.5) Bb(.25)
-            Bb(1) R(.25) C(.25) D(.25) D(.25) D(.25) C(.75) C(.5) Bb(.25) Bb(.25)
-            Bb(3) R(1).
-
-        </div>
+    <div id="unmappedNotes"></div>
+    <button onclick="parseNotes()">Parse Notes</button>
 </body>
 
 </html>
