--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             display: flex;
             align-items: start;
             justify-content: center;
-            font-size: 8px;
+            font-size: 7px;
             font-weight: bold;
         }
 
@@ -233,7 +233,7 @@
 
 <body>
     <h2>Music Notation Parser</h2>
-    <div style="display: flex;">
+    <div style="display: flex; flex-wrap: wrap;">
         <div style="width: 100%;">
             <h3>Visual Representation (with notes):</h3>
             <div id="visualResult" style="height: 40em; overflow: scroll; width: 100%;"></div>
