--- a/index.html
+++ b/index.html
@@ -233,12 +233,12 @@
 
 <body>
     <h2>Music Notation Parser</h2>
-    <div style="display: flex; flex-wrap: wrap;">
-        <div style="width: 100%;">
+    <div style="display: flex; flex-wrap: wrap; justify-content: space-evenly;">
+        <div>
             <h3>Visual Representation (with notes):</h3>
             <div id="visualResult" style="height: 40em; overflow: scroll; width: 100%;"></div>
         </div>
-        <div style="width: 70%; display: flex; flex-direction: column; padding: 1em;">
+        <div style="display: flex; flex-direction: column; padding: 1em;">
             <h2>Music Notation</h2>
             <textarea id="inputText" placeholder="Enter your musical notation here..."></textarea>
             <div> <button onclick="parseNotes()">Parse Notes</button></div>
